Fix playerview spacing to not have top most token behind helper buttons

--- a/src/_css/components/_gm-grimoire.scss
+++ b/src/_css/components/_gm-grimoire.scss
@@ -132,6 +132,7 @@
             display: flex;
             flex-direction: column;
             gap: 2px;
+            margin-top: 16px;
         }
     }
 
